Current time to the about page

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <section id="sd-about">
         <div class="about-section">
             <h1>Welcome to SELFDESIGN</h1>
+            <p id="demo" class="demo">00:00:00</p>
         </div>
     </section>
 
@@ -48,5 +49,7 @@
 
         </div>
     </section>
+
+    <script src="js/app.js"></script>
 </body>
 </html>
