--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selfdesign | Design & Buy</title>
     <link rel="stylesheet" href="css/main.css">
+    <script data-ad-client="ca-pub-2434524128868524" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
     <nav>
